--- a/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
+++ b/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
@@ -9,11 +9,11 @@
   font-weight: bold;
 }
 
-.tile-container {
+.tile-container-ug-coverage {
   display: flex;
 }
 
-.tile {
+.tile-ug-coverage {
   width: 33.3%;
   border: .0625rem solid #e0e0e0;
   min-height: 10rem;
@@ -21,7 +21,7 @@
   background-color: #ffff;
 }
 
-.tile-margin {
+.tile-margin-ug-coverage {
   margin-right: 1rem;
 }
 
@@ -52,15 +52,6 @@
   min-height: calc(100vh - 54px);
 }
 
-.footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 20px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-}
 
 .rights-panel {
   margin-bottom: .3rem;
