--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -5,8 +5,37 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  border-bottom: 1px solid #ddd; /* Optional, for a visual separation */
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+
+  .cds--popover {
+    display: none;
+  }
+
+  .cds--overflow-menu.cds--overflow-menu--open:hover {
+    background-color: transparent !important;
+  }
+
+  .cds--overflow-menu:hover, .cds--overflow-menu__trigger:hover {
+    background-color: transparent;
+  }
+
+  .cds--overflow-menu__wrapper {
+    margin-right: 0.5rem;
+  }
+
+  .cds--overflow-menu.cds--overflow-menu--open, .cds--overflow-menu.cds--overflow-menu--open .cds--overflow-menu__trigger {
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  svg {
+    fill: #ffffff;
+  }
 }
+
+
 
 .header-label {
   padding: 0.8rem;
