--- a/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
+++ b/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
@@ -3,7 +3,7 @@
 }
 
 .tile-ug-coverage {
-  width: 33.3%;
+  width: 32.3%;
   border: .0625rem solid #e0e0e0;
   min-height: 10rem;
   border-radius: 1rem;
@@ -20,7 +20,7 @@
 }
 
 .item-chart {
-  width: 50%;
+  width: 100%;
   border: .0625rem solid #e0e0e0;
   min-height: 600px;
   border-radius: .5rem;
@@ -30,6 +30,15 @@
   .cds--cc--title p.title {
     padding-bottom: 1rem;
   }
+}
+
+.tile-coverage {
+  width: 50%;
+  border: .0625rem solid #e0e0e0;
+  min-height: 10rem;
+  border-radius: 1rem;
+  background-color: #ffff;
+  padding: 1rem;
 }
 
 .item-chart-left {
