--- a/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
+++ b/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
@@ -67,7 +67,7 @@
 }
 
 .emr-details-table {
-  padding: 1rem 0 0 1rem;
+  padding: 0.5rem 0 0 1rem !important;
 }
 
 .tile-items-container {
@@ -80,9 +80,12 @@
   font-size: 21px;
 }
 
+.td-text-align {
+  text-align: end;
+}
+
 .emr-details-table td {
-  font-size: 15px;
-  font-family: sans-serif;
+  font-size: 13px;
   padding-bottom: 6px;
 }
 
@@ -161,4 +164,13 @@
 
 .level-text {
   font-size: small;
+}
+
+.level {
+  font-size: 13px;
+  margin: 0 0.5rem;
+}
+
+.td-details-value {
+  font-weight: bold;
 }
