--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -52,3 +52,10 @@
   border-top: solid 1px #009384;
   padding: .5rem;
 }
+
+.disabled-link {
+  pointer-events: none;
+  color: gray;
+  cursor: not-allowed;
+  text-decoration: none;
+}
