--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -59,3 +59,9 @@
   cursor: not-allowed;
   text-decoration: none;
 }
+
+a.cds--side-nav__link:focus {
+  background: #80808030;
+  border-left: 5px solid #009d9a;
+  outline: none !important;
+}
