Refactor Metrics Tiles (#5)
* Add charts categorization by POC & RDE

* Rename RDE to Retrospective

* Add context to tiles

* Update tiles on coverage

* Make links disabled

* Add styling

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -52,3 +52,16 @@
   border-top: solid 1px #009384;
   padding: .5rem;
 }
+
+.disabled-link {
+  pointer-events: none;
+  color: gray;
+  cursor: not-allowed;
+  text-decoration: none;
+}
+
+a.cds--side-nav__link:focus {
+  background: #80808030;
+  border-left: 5px solid #009d9a;
+  outline: none !important;
+}
