--- a/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
+++ b/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
@@ -3,8 +3,8 @@
 }
 
 .tile-ug-coverage {
-  width: 33.3%;
-  border: .0625rem solid #e0e0e0;
+  width: 24%;
+  border: .0625rem solid #b5b5b5e3;
   min-height: 10rem;
   border-radius: 1rem;
   background-color: #ffff;
@@ -20,8 +20,8 @@
 }
 
 .item-chart {
-  width: 50%;
-  border: .0625rem solid #e0e0e0;
+  width: 100%;
+  border: .0625rem solid #b5b5b5e3;
   min-height: 600px;
   border-radius: .5rem;
   background-color: #ffff;
@@ -30,6 +30,15 @@
   .cds--cc--title p.title {
     padding-bottom: 1rem;
   }
+}
+
+.tile-coverage {
+  width: 50%;
+  border: .0625rem solid #b5b5b5e3;
+  min-height: 10rem;
+  border-radius: 1rem;
+  background-color: #ffff;
+  padding: 1rem;
 }
 
 .item-chart-left {
@@ -58,7 +67,7 @@
 }
 
 .emr-details-table {
-  padding: 1rem 0 0 1rem;
+  padding: 0.5rem 0 0 1rem !important;
 }
 
 .tile-items-container {
@@ -67,13 +76,16 @@
 }
 
 .tile-item-value {
-  padding-top: 2.8rem;
-  font-size: 25px;
+  padding-top: 3.1rem;
+  font-size: 21px;
+}
+
+.td-text-align {
+  text-align: left;
 }
 
 .emr-details-table td {
-  font-size: 15px;
-  font-family: sans-serif;
+  font-size: 13px;
   padding-bottom: 6px;
 }
 
@@ -137,4 +149,46 @@
 
 .section-wrapper {
   margin-left: 15rem;
+}
+
+.level-style {
+  padding-top: 3rem;
+  font-size: small;
+}
+
+.level-value-style {
+  margin-right: 0.5rem;
+  color: #009d9a;
+  font-weight: bold;
+}
+
+.level-text {
+  font-size: small;
+}
+
+.level {
+  font-size: 14px;
+  margin: 0 0.5rem 0 0;
+}
+
+.td-details-value {
+  font-weight: bold;
+}
+
+.tile-header-style {
+  border-bottom-color: #d6d5d5;
+  border-bottom-width: 1px;
+  /*border-bottom-style: solid;*/
+  margin-bottom: 2%;
+}
+
+.header-text-color {
+  margin: 1% 0 0 5%;
+  font-size: 1.3em
+}
+
+.tile-item-coverage {
+  padding-right: 2rem;
+  font-size: 3em;
+  color: #b9b7b7;
 }
