Add responsive css

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,96 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 600px) {
+  /* Styles for small mobile screens */
+  .section-wrapper {
+    margin-left: unset !important;
+  }
+
+  .tile-container-ug-coverage {
+    display: block !important;
+  }
+
+  .tile-margin-ug-coverage, .tile-margin {
+    margin-right: unset!important;
+  }
+
+  .tile-ug-coverage, .tile, .tile-coverage {
+    width: 100% !important;
+    margin-bottom: 1rem;
+  }
+
+  .tile-container {
+    padding-top: unset !important;
+    display: block !important;
+  }
+
+  .item-chart-container {
+    padding-top: unset !important;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1055px) {
+  /* Styles for tablets in portrait */
+  .section-wrapper {
+    margin-left: unset !important;
+  }
+
+  .tile-ug-coverage {
+    width: 50% !important;
+  }
+
+  .tile-container-ug-coverage {
+    display: unset !important;
+  }
+
+  .tile-wrapper-one, .tile-wrapper-two {
+    display: flex;
+  }
+
+  .tile-wrapper-one {
+    margin-bottom: 1rem;
+  }
+
+  .tile-container {
+    display: unset !important;
+  }
+
+  .tile, .tile-coverage {
+    width: 98% !important;
+    margin-top: 1rem;
+  }
+}
+
+@media only screen and (min-width: 1056px) and (max-width: 1450px)  {
+  /* Styles for laptops and small desktops */
+  .tile-wrapper-one, .tile-wrapper-two {
+    display: flex;
+    width: 100%;
+  }
+
+  .tile-ug-coverage {
+    width: 50% !important;
+  }
+
+  .section-wrapper {
+    margin-left: unset !important;
+  }
+
+  .cds--side-nav--ux {
+    inline-size: 0 !important;
+  }
+}
+
+@media only screen and (min-width: 1056px) {
+  /* Styles for laptops and small desktops */
+  .tile-wrapper-one, .tile-wrapper-two {
+    display: flex;
+    width: 100%;
+  }
+
+  .tile-ug-coverage {
+    width: 50% !important;
+  }
+}
